# my_very_good_klondike

./: .bazelrc  .gitignore  BUILD  Dockerfile  MODULE.bazel  Makefile  README.md  board.cpp  board.h  card.cpp  card.h  deck.cpp  deck.h  foundation.cpp  foundation.h  full_solve_tests.sh  fullsolve_badperf.out  location.cpp  location.h  move.cpp  move.h  move_cmd.cpp  move_cmd.h  pile.cpp  pile.h  run.cpp  run.h  solitaire.cpp  stock.cpp  stock.h  tableau.cpp  tableau.h
.github/workflows/: bazel-build.yml  bazelisk-build.yml  c-cpp.yml
benchmark/: isstuck_benchmark.cpp
hooks/: pre-commit
inputs/: 10.txt  5.txt  README.md  log_bazel_0_again.txt  log_bazel_1_again.txt  seed2_autosolve_cmds.txt  seed2_cmds.txt  seed4_another_input.txt  seed7_input.txt
lib/: board.cpp  board.h  card.cpp  card.h  command.cpp  command.h  deck.cpp  deck.h  foundation.cpp  foundation.h  gamelog_cmd.cpp  gamelog_cmd.h  hint_cmd.cpp  hint_cmd.h  location.cpp  location.h  move.cpp  move.h  move_cmd.cpp  move_cmd.h  pile.cpp  pile.h  run.cpp  run.h  stock.cpp  stock.h  tableau.cpp  tableau.h
outputs/: 0.out  1.out  10.out  5.out  dbg_solitaire_4.out  solitaire_4.out  solitaire_7.out
test/: board_test.cpp  card_test.cpp  deck_test.cpp  gtest_solitaire_test.cpp  test_solitaire.cpp
