###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
	name = "my-very-good-klondike",
	version= "1.0",
)

bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "gflags", version = "2.2.2")
